Re-enabled rdiscount

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
 pygments: true
-markdown: maruku
-maruku:
-  use_tex:    true
-  use_divs:   false
-  png_dir:    images/latex
-  png_url:    /images/latex
+markdown: rdiscount
 
 description: "Personal website for Lewis Oaten."
 keywords: - Lewis
