--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ pygments: true
 markdown: rdiscount
 lsi: true
 permalink: /:categories/:year/:month/:day/:title.html
-description: "Personal website for Lewis Oaten."
+description: Personal website for Lewis Oaten.
 keywords: - Lewis
           - Oaten
 	  - Programming
@@ -15,4 +15,4 @@ keywords: - Lewis
 	  - Scrum
 	  - XP
 	  - Computing
-title: "Lewis Oaten"
+title: Lewis Oaten
