--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: Personal website for Lewis Oaten.
 highlighter: rouge
 markdown: kramdown
 lsi: true
-permalink: /:categories/:year/:month/:day/:title.html
+permalink: /:categories/:year/:month/:day/:title.output_ext
